--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,6 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1= "Welcome to " + title
+  br
+  p My wallet address: #{user.wallet_address}
