--- a/views/login.pug
+++ b/views/login.pug
@@ -1,4 +1,14 @@
 extends layout
 
 block content
+  br
   h1 Login page
+  form(method='POST', action='/users/login')
+    #form-group
+      label Username:
+      input.form-control(name='username', type='text')
+    #form-group
+      label Password:
+      input.form-control(name='password', type='password')
+    br
+    input.btn.btn-primary(type='submit', value='Log in')
