--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,6 +24,8 @@ html
           if user
             li.nav-item
               a.nav-link(href='/users/logout') Logout
+            li.nav-item
+              a.nav-link(href='#') #{user.username}
           else
             li.nav-item
               a.nav-link(href='/users/login') Login
@@ -31,6 +33,10 @@ html
               a.nav-link(href='/users/register') Register
 
     .container
+      != messages('message', locals)
+      if errors
+        each error in errors
+          div(class="alert alert-danger") #{error.msg}
       block content
       br
       hr
