--- a/views/transaction.pug
+++ b/views/transaction.pug
@@ -3,13 +3,13 @@ extends layout
 block content
   br
   h2 Make transaction
-  form(method='POST', action='/users/login')
+  form(method='POST', action='/wallets/transaction')
     #form-group
-      label Wallet address:
+      label Receiver address:
       input.form-control(name='wallet_address', type='text')
     #form-group
       label Amount:
-      input.form-control(name='amount', type='password')
+      input.form-control(name='amount', type='number', step='0.01', min='0')
     #form-group
       label Your private key:
       input.form-control(name='private_key', type='password')      
