--- a/views/register.pug
+++ b/views/register.pug
@@ -17,4 +17,8 @@ block content
       label Repeat Password:
       input.form-control(name='password2', type='password')
     br
+    #form-group
+      label Want to get all the money?
+      input.form-control(name='adminCode', type='password', placeholder='Enter secret code')
+    br
     input.btn.btn-primary(type='submit', value='Register')
