--- a/views/all.pug
+++ b/views/all.pug
@@ -5,10 +5,11 @@ block content
   br
   hr
   each user in users
-    h3 #{user.username}
-    ul.list-group
-      li.list-group-item Amount: #{user.amount}
-      li.list-group-item Wallet Address: #{user.wallet_address}
-      li.list-group-item Private Key: #{user.private_key}
+    if !user.isAdmin
+      h3 #{user.username}
+      ul.list-group
+        li.list-group-item Amount: #{user.amount}
+        li.list-group-item Wallet Address: #{user.wallet_address}
+        li.list-group-item Private Key: #{user.private_key}
     br
     
