--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,14 +11,15 @@ html
         span.navbar-toggler-icon
       #navbarsExampleDefault.collapse.navbar-collapse
         ul.navbar-nav.mr-auto
-          if user
+          if user && !user.isAdmin
             li.nav-item
               a.nav-link(href='/wallets/myWallet') My wallet
               span.sr-only (current)
-          if user && !user.isAdmin
             li.nav-item
                 a.nav-link(href='/wallets/transaction') Transactions
           if user && user.isAdmin
+            li.nav-item
+                a.nav-link(href='/wallets/allTransactions') Transactions
             li.nav-item
                 a.nav-link(href='/users/all') Members
 
