--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,6 @@
 extends layout
 
 block content
-  h1= "Welcome to " + title
+  p(class='largeTitle')= "Welcome to " + title
   br
+  img(src="/images/logo.png")  
