--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     title CroCoin
     link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
-    link(rel='stylesheet' href='/css/style.css')
+    link(rel='stylesheet' href='/stylesheets/style.css')
   body
     nav.navbar.navbar-expand-md.navbar-dark.bg-dark
       a.navbar-brand(href='/') CroCoinTransfer
@@ -17,6 +17,8 @@ html
               span.sr-only (current)
             li.nav-item
                 a.nav-link(href='/wallets/transaction') Transactions
+            li.nav-item
+                a.nav-link(href='/wallets/buySell') Buy/Sell    
           if user && user.isAdmin
             li.nav-item
                 a.nav-link(href='/wallets/allTransactions') Transactions
