Buy button without action

--- a/views/all.pug
+++ b/views/all.pug
@@ -12,6 +12,6 @@ block content
         tr
           if !user.isAdmin
             td  #{user.username}
-            td  #{user.wallet_adress}
+            td  #{user.wallet_address}
             td  #{user.amount}CroCoin
             td  #{user.bank_balance}$
